sbin/fsck_msdosfs: Use humanize_number to format available and bad space sizes
from freebsd/freebsd@996c6aefcf2ed50629407b6ad8794ebfce8ac794

--- a/sbin/fsck_msdosfs/Makefile
+++ b/sbin/fsck_msdosfs/Makefile
@@ -9,5 +9,7 @@ SRCS=	main.c check.c boot.c fat.c dir.c fsutil.c
 WARNS?=	2
 
 CFLAGS+= -I${FSCK}
+DPADD=		${LIBUTIL}
+LDADD=		-lutil
 
 .include <bsd.prog.mk>
