--- a/usr.bin/systat/Makefile
+++ b/usr.bin/systat/Makefile
@@ -4,7 +4,7 @@
 
 PROG=	systat
 NO_STRICT_ALIASING=
-CFLAGS+=-DINET6 -I${.CURDIR}/../../sys
+CFLAGS+=-DINET6 -I${.CURDIR}/../../sys -I${.CURDIR}/../who
 SRCS=	cmds.c cmdtab.c convtbl.c devs.c fetch.c ifcmds.c ifstat.c iostat.c \
 	keyboard.c main.c mbufs.c netcmds.c netstat.c pigs.c sensors.c swap.c \
 	icmp.c mode.c ip.c tcp.c vmstat.c ip6.c icmp6.c vmmeter.c symbols.c \
@@ -20,7 +20,5 @@ LDADD+=	-lutil
 
 CFLAGS+=	-I${_SHLIBDIRPREFIX}/usr/include/priv/ncurses
 LDFLAGS+=	${PRIVATELIB_LDFLAGS}
-
-CFLAGS+= -I${.CURDIR}/../who
 
 .include <bsd.prog.mk>
