Remove unneeded *_if.c from SRCS in kernel module Makefiles that have it.
Those are always compiled into the kernel, per NORMAL_M in kern.pre.mk,
so they don't need to be in a module's SRCS. This removes the few cases
where they were added by mistake.

--- a/sys/bus/iicbus/iicbus/Makefile
+++ b/sys/bus/iicbus/iicbus/Makefile
@@ -2,7 +2,7 @@
 
 .PATH:		${.CURDIR}/..
 KMOD		= iicbus
-SRCS		= device_if.h bus_if.h iicbus_if.h iicbus_if.c \
+SRCS		= device_if.h bus_if.h iicbus_if.h \
 		  iiconf.c iicbus.c
 
 .include <bsd.kmod.mk>
