--- a/sys/dev/agp/Makefile
+++ b/sys/dev/agp/Makefile
@@ -1,7 +1,7 @@
 KMOD	= agp
 SRCS	= agp.c 
 SRCS	+= agp_amd64.c agp_sis.c agp_via.c
-SRCS	+= agp_if.c device_if.h bus_if.h agp_if.h pci_if.h pcidevs.h
+SRCS	+= device_if.h bus_if.h agp_if.h pci_if.h pcidevs.h
 SRCS	+= opt_agp.h
 SRCS	+= intel-gtt.c
 
