--- a/sys/dev/misc/coremctl/Makefile
+++ b/sys/dev/misc/coremctl/Makefile
@@ -1,5 +1,5 @@
 KMOD = coremctl
-SRCS = coremctl.c coremctl_if.c
+SRCS = coremctl.c
 SRCS += device_if.h bus_if.h pci_if.h pcib_if.h coremctl_if.h
 
 .include <bsd.kmod.mk>
