--- a/sys/bus/gpio/gpio_acpi/Makefile
+++ b/sys/bus/gpio/gpio_acpi/Makefile
@@ -1,6 +1,6 @@
 KMOD= gpio_acpi
 
-SRCS= gpio_acpi.c gpio_if.c
+SRCS= gpio_acpi.c
 SRCS+= bus_if.h device_if.h opt_acpi.h acpi_if.h gpio_if.h
 
 .include <bsd.kmod.mk>
