--- a/sys/bus/iicbus/iicbb/Makefile
+++ b/sys/bus/iicbus/iicbb/Makefile
@@ -3,6 +3,6 @@
 .PATH:		${.CURDIR}/..
 KMOD		= iicbb
 SRCS		= device_if.h bus_if.h iicbus_if.h \
-		  iicbb_if.h iicbb_if.c iicbb.c
+		  iicbb_if.h iicbb.c
 
 .include <bsd.kmod.mk>
