--- a/sys/dev/virtual/virtio/virtio/Makefile
+++ b/sys/dev/virtual/virtio/virtio/Makefile
@@ -1,6 +1,5 @@
 KMOD=   virtio
 
-SRCS=   virtio.c virtqueue.c virtio_bus_if.h device_if.h bus_if.h \
-	virtio_bus_if.c
+SRCS=   virtio.c virtqueue.c virtio_bus_if.h device_if.h bus_if.h
 
 .include <bsd.kmod.mk>
